# IEP

Proiect1IEP/: CMakeLists.txt  main.cpp
Proiect2IEP/: BMW.cpp  CMakeLists.txt  Car.cpp  main.cpp
Proiect3IEP/: CMakeLists.txt  Car.cpp  main.cpp
